# personal-assistant

./: pyproject.toml  setup.cfg  setup.py
src/: __init__.py
