[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant"
version = "0.0.1"
authors = [
  { name="Olds coders", email="author@example.com" },
]
description = "Personal assistant helps you organize your notes and address book."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/prominb/personal-assistant"
Issues = "https://github.com/prominb/personal-assistant/issues"

[project.scripts]
run-assistant = "personal-assistant:run_bot"